--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
+    "autoprefixer": "10.4.18",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "1.4.5",
     "fastify": "4.26.1",
     "fastify-plugin": "4.5.1",
+    "postcss": "8.4.35",
     "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "undici": "6.6.2",
     "vite": "5.1.4",
