--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "scripts": {
     "build": "qwik build",
+    "build-storybook": "storybook build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/fastify/vite.config.ts",
@@ -24,6 +25,7 @@
     "preview": "qwik build preview && vite preview --open",
     "serve": "node server/entry.fastify",
     "start": "vite --open --mode ssr",
+    "storybook": "storybook dev -p 6006",
     "update": "npx npm-check-updates -u",
     "update.check": "npx npm-check-updates",
     "qwik": "qwik"
@@ -33,6 +35,12 @@
     "@builder.io/qwik-city": "1.4.5",
     "@fastify/compress": "7.0.0",
     "@fastify/static": "7.0.1",
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-links": "7.6.17",
+    "@storybook/blocks": "7.6.17",
+    "@storybook/builder-vite": "7.6.17",
+    "@storybook/html": "7.6.17",
+    "@storybook/html-vite": "7.6.17",
     "@types/eslint": "8.56.5",
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "7.1.0",
@@ -46,6 +54,8 @@
     "postcss": "8.4.35",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
+    "storybook": "7.6.17",
+    "storybook-framework-qwik": "0.3.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "undici": "6.6.2",
