--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@builder.io/qwik": "1.4.5",
     "@builder.io/qwik-city": "1.4.5",
+    "@dnlup/fastify-traps": "3.0.2",
     "@fastify/compress": "7.0.0",
     "@fastify/static": "7.0.1",
     "@storybook/addon-essentials": "7.6.17",
@@ -61,8 +62,5 @@
     "undici": "6.6.2",
     "vite": "5.1.4",
     "vite-tsconfig-paths": "4.3.1"
-  },
-  "dependencies": {
-    "@dnlup/fastify-traps": "3.0.2"
   }
 }
