--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -8,7 +8,7 @@ on:
     branches: ["master"]
 
 jobs:
-  eslint:
+  prettier:
     name: Run prettier scanning
     runs-on: ubuntu-latest
     permissions:
