--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,39 @@
 # Venv
 /.venv
 
-# Env
-.env
-.env.local
+# Git
+/.git
+
+# Readme
+[Rr][Ee][Aa][Dd][Mm][Ee]
+[Rr][Ee][Aa][Dd][Mm][Ee].[Mm][Dd]
+
+# Ignores
+.dockerignore
+.gitignore
+
+# Docker
+Dockerfile
+*.dockerfile
+
+# k8s
+/k8s
+
+# Kind
+/kind
 
 # Build
 /dist
 /lib
 /lib-types
 /server
-/storybook-static
+/tmp
 
 # Development
 node_modules
 *.local
 package-lock.json
+.tool-versions
 
 # Cache
 .cache
@@ -33,9 +51,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Editor
-.vscode/*
-!.vscode/launch.json
-!.vscode/*.code-snippets
+/.vscode
 
 .idea
 .DS_Store
