--- a/package.json
+++ b/package.json
@@ -64,5 +64,15 @@
     "undici": "6.6.2",
     "vite": "5.1.4",
     "vite-tsconfig-paths": "4.3.1"
+  },
+  "dependencies": {
+    "@wagmi/connectors": "4.1.14",
+    "@wagmi/core": "2.6.5",
+    "@web3modal/siwe": "4.0.11",
+    "@web3modal/wagmi": "4.0.11",
+    "jsonwebtoken": "9.0.2",
+    "siwe": "2.1.4",
+    "surrealdb.js": "0.11.0",
+    "viem": "2.7.16"
   }
 }
