--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/html": "7.6.17",
     "@storybook/html-vite": "7.6.17",
     "@types/eslint": "8.56.5",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
