--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-qwik-empty-starter",
-  "description": "App with Routing built-in ready to create your app",
+  "name": "portfolio-management-platform",
+  "description": "Portfolio Management Platform",
   "engines": {
     "node": "21.6.2"
   },
@@ -37,7 +37,7 @@
     "@dnlup/fastify-traps": "3.0.2",
     "@fastify/compress": "7.0.0",
     "@fastify/static": "7.0.1",
-    "@playwright/test": "1.42.0",
+    "@playwright/test": "1.42.1",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-links": "7.6.17",
     "@storybook/blocks": "7.6.17",
@@ -45,6 +45,7 @@
     "@storybook/html": "7.6.17",
     "@storybook/html-vite": "7.6.17",
     "@types/eslint": "8.56.5",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
@@ -52,7 +53,7 @@
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "1.4.5",
-    "fastify": "4.26.1",
+    "fastify": "4.26.2",
     "fastify-plugin": "4.5.1",
     "postcss": "8.4.35",
     "prettier": "3.2.5",
@@ -61,8 +62,18 @@
     "storybook-framework-qwik": "0.3.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "undici": "6.6.2",
+    "undici": "6.7.0",
     "vite": "5.1.4",
     "vite-tsconfig-paths": "4.3.1"
+  },
+  "dependencies": {
+    "@wagmi/connectors": "4.1.14",
+    "@wagmi/core": "2.6.5",
+    "@web3modal/siwe": "4.0.11",
+    "@web3modal/wagmi": "4.0.11",
+    "jsonwebtoken": "9.0.2",
+    "siwe": "2.1.4",
+    "surrealdb.js": "0.11.0",
+    "viem": "2.7.18"
   }
 }
