--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jsonwebtoken": "9.0.2",
     "siwe": "2.1.4",
     "surrealdb.js": "0.11.0",
+    "tailwind-merge": "2.2.1",
     "viem": "2.7.18"
   }
 }
