--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,10 +26,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-        #   cache: "npm"
+          cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: node -v && npm ci
 
       - name: Lint code
         run: npm run lint
