--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,7 +29,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: node -v && npm ci
+        run: npm install
 
       - name: Lint code
         run: npm run lint
