--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   check:
-    name: Verify style and build
+    name: Style and build
     runs-on: ubuntu-latest
     permissions:
       security-events: write
@@ -29,7 +29,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Lint code
         run: npm run lint
