--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   NODE_VERSION: "21.6.2"
-  PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH: test-results/
+  PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH: ./test-results
   PLAYWRIGHT_VERSION:
 
 jobs:
@@ -29,6 +29,7 @@ jobs:
         id: playwright-version
         run: |
           PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright/test | sed 's/.*@//')
+          echo "Playwright's Version: $PLAYWRIGHT_VERSION"
           echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
 
       - name: Cache Playwright dependencies
