--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,6 +9,7 @@ on:
 env:
   NODE_VERSION: "21.6.2"
   PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH: test-results
+  PLAYWRIGHT_TEST_RESULTS_ARTIFACT_RETENTION_DAYS: 7
   PLAYWRIGHT_VERSION:
 
 jobs:
@@ -49,12 +50,10 @@ jobs:
       - name: Run tests
         run: npm run test.e2e
 
-      - name: tmp ls -la
-        run: ls -la
-
       - name: Save results artifact
         uses: actions/upload-artifact@v4
-        if: always()
+        if: failure()
         with:
           name: playwright-test-results
-          path: test-results
+          path: ${{ env.PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH }}
+          retention-days: ${{ env.PLAYWRIGHT_TEST_RESULTS_ARTIFACT_RETENTION_DAYS }}
