--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   NODE_VERSION: "21.6.2"
-  PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH: test-results
+  PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH: test-results/
   PLAYWRIGHT_TEST_RESULTS_ARTIFACT_RETENTION_DAYS: 7
   PLAYWRIGHT_VERSION:
 
