debug: try run database in action

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -47,6 +47,10 @@ jobs:
         run: npm run test.e2e.setup
         if: steps.playwright-cache.outputs.cache-hit != 'true'
 
+      - name: Start application database
+        run: |
+          ./scripts/database-setup.sh
+
       - name: Run tests
         run: npm run test.e2e
 
