--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -66,7 +66,7 @@ jobs:
         uses: JarvusInnovations/background-action@v1
         with:
           run: npm run dev
-          wait-on: http-get://localhost:${{ env.APP_PORT }}
+          wait-on: http://localhost:${{ env.APP_PORT }}
 
       - name: Run tests
         run: npm run test.e2e
