ci: change wait on production build to sent get 200

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -68,7 +68,7 @@ jobs:
         uses: JarvusInnovations/background-action@v1
         with:
           run: npm run serve
-          wait-on: http://localhost:${{ env.APP_PORT }}
+          wait-on: http-get://localhost:${{ env.APP_PORT }}
 
       - name: Run tests
         run: npm run test.e2e
