ci: add app context envs to workflow

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,12 +7,25 @@ on:
     branches: ["master"]
 
 env:
+  # Workflow context variables
   NODE_VERSION: "21.6.2"
   APP_DATABASE_PORT: 8000
   APP_PORT: 3000
   PLAYWRIGHT_TEST_RESULTS_RELATIVE_PATH: test-results/
   PLAYWRIGHT_TEST_RESULTS_ARTIFACT_RETENTION_DAYS: 7
   PLAYWRIGHT_VERSION:
+  # App config context variables
+  PUBLIC_PROJECT_ID:
+  PUBLIC_METADATA_NAME:
+  PUBLIC_METADATA_DESCRIPTION:
+  PW_BASE_URL:
+  SURREALDB_URL:
+  SURREALDB_USER:
+  SURREALDB_PASS:
+  SURREALDB_NS:
+  SURREALDB_DB:
+  ACCESS_TOKEN_SECRET:
+  REFRESH_TOKEN_SECRET:
 
 jobs:
   e2e:
