debug: add ls for tests

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -91,7 +91,9 @@ jobs:
       #     wait-on: http-get://localhost:${{ env.APP_PORT }}
 
       - name: Run tests
-        run: npm run test.e2e
+        run: |
+          ls -la
+          npm run test.e2e
 
       - name: Save results artifact
         if: failure()
