debug: add directyl variables

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,17 +15,17 @@ env:
   PLAYWRIGHT_TEST_RESULTS_ARTIFACT_RETENTION_DAYS: 7
   PLAYWRIGHT_VERSION:
   # App config context variables
-  PUBLIC_PROJECT_ID:
-  PUBLIC_METADATA_NAME:
-  PUBLIC_METADATA_DESCRIPTION:
-  PW_BASE_URL:
-  SURREALDB_URL:
-  SURREALDB_USER:
-  SURREALDB_PASS:
-  SURREALDB_NS:
-  SURREALDB_DB:
-  ACCESS_TOKEN_SECRET:
-  REFRESH_TOKEN_SECRET:
+  PUBLIC_PROJECT_ID: ${{ vars.PUBLIC_PROJECT_ID }}
+  PUBLIC_METADATA_NAME: ${{ vars.PUBLIC_METADATA_NAME }}
+  PUBLIC_METADATA_DESCRIPTION: ${{ vars.PUBLIC_METADATA_DESCRIPTION }}
+  PW_BASE_URL: ${{ vars.PW_BASE_URL }}
+  SURREALDB_URL: ${{ vars.SURREALDB_URL }}
+  SURREALDB_USER: ${{ secrets.SURREALDB_USER }}
+  SURREALDB_PASS: ${{ secrets.SURREALDB_PASS }}
+  SURREALDB_NS: ${{ secrets.SURREALDB_NS }}
+  SURREALDB_DB: ${{ secrets.SURREALDB_DB }}
+  ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+  REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
 
 jobs:
   e2e:
