--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/builder-vite": "7.6.17",
     "@storybook/html": "7.6.17",
     "@storybook/html-vite": "7.6.17",
+    "@tenkeylabs/dappwright": "^2.8.2",
     "@types/eslint": "8.56.5",
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.11.25",
