ci: add missing variables to e2e workflow

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,6 +26,9 @@ env:
   SURREALDB_DB: ${{ secrets.SURREALDB_DB }}
   ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
   REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+  SUBGRAPH_URL: ${{ secrets.SUBGRAPH_URL }}
+  UNISWAP_SUBGRAPH_URL: ${{ secrets.UNISWAP_SUBGRAPH_URL }}
+  UNIV3_OPTIMIST_SUBGRAPH_URL: ${{ secrets.UNIV3_OPTIMIST_SUBGRAPH_URL }}
 
 jobs:
   e2e:
