--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/builder-vite": "7.6.17",
     "@storybook/html": "7.6.17",
     "@storybook/html-vite": "7.6.17",
+    "@types/d3": "^7.4.3",
     "@types/eslint": "8.56.5",
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.11.25",
@@ -74,6 +75,7 @@
     "@wagmi/core": "2.6.5",
     "@web3modal/siwe": "4.0.13",
     "@web3modal/wagmi": "4.0.13",
+    "d3": "^7.9.0",
     "jsonwebtoken": "9.0.2",
     "jwt-decode": "^4.0.0",
     "qwik-image": "0.0.8",
