feat: add foundry anvil run ansible playbook for kind

--- a/kind/install.yaml
+++ b/kind/install.yaml
@@ -12,3 +12,6 @@
 
 - name: Install SurrealDB
   ansible.builtin.import_playbook: playbooks/surrealdb.yaml
+
+- name: Install Foundry
+  ansible.builtin.import_playbook: playbooks/foundry.yaml
