--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "test.e2e.setup": "playwright install --with-deps",
     "update": "npx npm-check-updates -u",
     "update.check": "npx npm-check-updates",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "ngrok": "ngrok http http://localhost:5173",
+    "stream": "node moralis/stream.js"
   },
   "devDependencies": {
     "@builder.io/qwik": "1.5.1",
@@ -71,6 +73,7 @@
     "vite-tsconfig-paths": "4.3.1"
   },
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.25.2",
     "@wagmi/connectors": "4.1.14",
     "@wagmi/core": "2.6.5",
     "@web3modal/siwe": "4.0.13",
@@ -78,6 +81,7 @@
     "d3": "^7.9.0",
     "jsonwebtoken": "9.0.2",
     "jwt-decode": "^4.0.0",
+    "moralis": "^2.25.2",
     "qwik-image": "0.0.8",
     "siwe": "2.1.4",
     "surrealdb.js": "0.11.0",
