--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@typescript-eslint/eslint-plugin": "7.1.1",
     "@typescript-eslint/parser": "7.1.1",
     "autoprefixer": "10.4.18",
-    "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "1.5.1",
     "fastify": "4.26.2",
@@ -73,12 +72,12 @@
     "vite-tsconfig-paths": "4.3.1"
   },
   "dependencies": {
-    "@moralisweb3/common-evm-utils": "^2.25.2",
+    "@moralisweb3/common-evm-utils": "2.25.2",
     "@wagmi/connectors": "4.1.14",
     "@wagmi/core": "2.6.5",
     "@web3modal/siwe": "4.0.13",
     "@web3modal/wagmi": "4.0.13",
-    "d3": "^7.9.0",
+    "d3": "7.9.0",
     "jsonwebtoken": "9.0.2",
     "jwt-decode": "^4.0.0",
     "moralis": "^2.25.2",
