ci: add missing variables to e2e workflow

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,6 +18,8 @@ env:
   PUBLIC_PROJECT_ID: ${{ vars.PUBLIC_PROJECT_ID }}
   PUBLIC_METADATA_NAME: ${{ vars.PUBLIC_METADATA_NAME }}
   PUBLIC_METADATA_DESCRIPTION: ${{ vars.PUBLIC_METADATA_DESCRIPTION }}
+  PUBLIC_EMETH_CONTRACT_ADDRESS: ${{ vars.PUBLIC_EMETH_CONTRACT_ADDRESS }}
+  PUBLIC_EMETH_CONTRACT_ADDRESS_SEPOLIA: ${{ vars.PUBLIC_EMETH_CONTRACT_ADDRESS_SEPOLIA }}
   PW_BASE_URL: ${{ vars.PW_BASE_URL }}
   SURREALDB_URL: ${{ vars.SURREALDB_URL }}
   SURREALDB_USER: ${{ secrets.SURREALDB_USER }}
