Add missing variables to e2e workflow (#59)
* ci: add missing variables to e2e workflow

* ci: add missing variables to e2e workflow

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,6 +18,8 @@ env:
   PUBLIC_PROJECT_ID: ${{ vars.PUBLIC_PROJECT_ID }}
   PUBLIC_METADATA_NAME: ${{ vars.PUBLIC_METADATA_NAME }}
   PUBLIC_METADATA_DESCRIPTION: ${{ vars.PUBLIC_METADATA_DESCRIPTION }}
+  PUBLIC_EMETH_CONTRACT_ADDRESS: ${{ vars.PUBLIC_EMETH_CONTRACT_ADDRESS }}
+  PUBLIC_EMETH_CONTRACT_ADDRESS_SEPOLIA: ${{ vars.PUBLIC_EMETH_CONTRACT_ADDRESS_SEPOLIA }}
   PW_BASE_URL: ${{ vars.PW_BASE_URL }}
   SURREALDB_URL: ${{ vars.SURREALDB_URL }}
   SURREALDB_USER: ${{ secrets.SURREALDB_USER }}
@@ -26,6 +28,9 @@ env:
   SURREALDB_DB: ${{ secrets.SURREALDB_DB }}
   ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
   REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+  SUBGRAPH_URL: ${{ secrets.SUBGRAPH_URL }}
+  UNISWAP_SUBGRAPH_URL: ${{ secrets.UNISWAP_SUBGRAPH_URL }}
+  UNIV3_OPTIMIST_SUBGRAPH_URL: ${{ secrets.UNIV3_OPTIMIST_SUBGRAPH_URL }}
 
 jobs:
   e2e:
