feat: update README, update scripts

--- a/k8s/patches/staging/routes.yaml
+++ b/k8s/patches/staging/routes.yaml
@@ -8,7 +8,7 @@ spec:
       name: nginx-staging-gateway
       namespace: nginx-staging-gateway
   hostnames:
-    - emeth.staging.visoft.dev
+    - stg.emeth.xyz
   rules:
     - matches:
       backendRefs:
