--- a/package.json
+++ b/package.json
@@ -48,17 +48,17 @@
     "@storybook/builder-vite": "7.6.17",
     "@storybook/html": "7.6.17",
     "@storybook/html-vite": "7.6.17",
-    "@types/compression": "^1.7.2",
+    "@types/compression": "1.7.2",
     "@types/d3": "7.4.3",
     "@types/eslint": "8.56.5",
-    "@types/express": "^4.17.19",
+    "@types/express": "4.17.19",
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.11.25",
     "@typescript-eslint/eslint-plugin": "7.1.1",
     "@typescript-eslint/parser": "7.1.1",
     "autoprefixer": "10.4.18",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.2",
+    "compression": "1.7.4",
+    "dotenv": "16.3.2",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "1.5.1",
     "express": "4.18.2",
